--- a/client/src/styles/SectionPage.scss
+++ b/client/src/styles/SectionPage.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
 
   &-content {
-    margin: 10rem 7rem 0rem;
+    margin: 3rem 0rem;
     &_info {
       color: white;
       text-transform: capitalize;
