--- a/client/src/styles/movies.scss
+++ b/client/src/styles/movies.scss
@@ -1,16 +1,22 @@
 .movies-content {
   display: flex;
   flex-direction: column;
+  
   &_nowPlaying {
-    margin-bottom: -1rem;
+    margin: 1rem 0rem 1rem;
     &--movie {
+      border-radius: .5rem;
+      background-size: cover;
+      background-repeat: no-repeat;
+
+      background-color: gray;
       position: relative;
-      height: 70vh;
-      &-img {
-        width: 100%;
-      }
+      height: 50rem;
+      // &-img {
+      //   border-radius: .5rem;
+      // }
       &-info {
-        padding: 7rem;
+        padding: 4rem 4rem 4rem;
         display: flex;
         flex-direction: column;
         justify-content: flex-end;
@@ -18,9 +24,9 @@
         position: absolute;
         bottom: 0rem;
         background-image: linear-gradient(
-          to top,
-          rgba(rgb(0, 0, 0), 0.6),
-          rgba(rgb(0, 0, 0), 0)
+          45deg,
+          rgba(rgb(12, 11, 11), .8),
+          rgba(rgb(12, 11, 11), 0)
         );
         width: 100%;
         height: 100%;
@@ -31,8 +37,9 @@
         }
         &__title {
           color: white;
-          font-size: 5.5rem;
+          font-size: 4rem;
           font-weight: 500;
+          width: 60%;
         }
 
         &__overview {
@@ -61,13 +68,17 @@
   }
   &_SecondarySection {
     width: 100%;
+    margin-bottom: 1rem;
     // padding-bottom: 1rem;
-    height: 48rem;
+    // height: 46rem;
     &-header {
+      // background-color: green;
       display: flex;
       align-items: center;
-      padding: 4rem 1rem 0;
+      padding: 2rem .5rem 0;
       &--name {
+        line-height: 1;
+        z-index: 10;
         margin-right: 2rem;
         color: white;
         font-size: 2.6rem;
@@ -84,9 +95,10 @@
       // align-items: center;
       position: relative;
       transition: all 0.2s;
-      padding: 2rem 0.5rem;
+      padding: 1.4rem 0.5rem;
       &--box {
-        height: 30.6rem;
+        // height: 100%;
+        // height: 30.6rem;
         // width: 20.5rem;
         &-img {
           border-radius: 0.05rem;
@@ -104,7 +116,6 @@
         &-info {
           transition: all 0.3s;
           opacity: 0;
-
           position: absolute;
           margin: 0rem 0rem;
           bottom: 0rem;
@@ -123,7 +134,7 @@
             &-title {
               font-size: 1.7rem;
               color: white;
-              width: 70%;
+              width: 100%;
             }
             &-rating {
               color: #f32d58;
@@ -137,7 +148,7 @@
         position: absolute;
         top: 0;
         right: 0;
-        padding: 2.4rem 0.8rem;
+        padding: 1.8rem 0.9rem;
         opacity: 0;
         transform: all 0.2s;
         // width: 100%;
@@ -167,12 +178,12 @@
   &_genreSection {
     // padding: 2rem 0rem;
     width: 100%;
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
     &-header {
       display: flex;
       align-items: center;
       justify-content: space-between;
-      padding: 4rem 1rem 2rem;
+      padding: 2rem .5rem 1rem;
       line-height: 1;
 
       &--name {
@@ -233,9 +244,10 @@
     }
   }
   &_trailerSection {
-    // padding: 0 5rem;
     width: 100%;
     margin-bottom: 1rem;
+    // height: 46rem;
+
 
     & .slick-list > div {
       margin-left: 0;
@@ -247,10 +259,10 @@
     }
     &-header {
       display: flex;
-      align-items: flex-end;
-      justify-content: space-between;
-      padding: 4rem 1rem 0;
       line-height: 1;
+      // align-items: flex-end;
+      justify-content: space-between;
+      padding: 2rem .5rem 0;
       &--name {
         color: white;
         font-size: 2.6rem;
@@ -260,12 +272,11 @@
     }
     // width: 50rem;
     &-trailer {
-      padding: 2rem 0.5rem;
+      padding: 1.4rem 0.5rem;
 
       // width: 50rem;
-      position: relative;
+      // position: relative;
       // padding-top: 56.25%; /* Player ratio: 100 / (1280 / 720) */
-      // width: 50% !important;
       &--player {
         // width: 100%;
         // position: absolute;
@@ -278,13 +289,15 @@
   &_networkSection {
     // padding: 0 5rem;
     width: 100%;
-    margin-bottom: 1rem;
+    // margin-bottom: 1rem;
     &-header {
       display: flex;
       align-items: flex-end;
       justify-content: space-between;
-      padding: 4rem 1rem 0rem;
+      padding: 2rem .5rem 0rem;
       &--name {
+        line-height: 1;
+        z-index: 10;
         color: white;
         font-size: 2.6rem;
         font-weight: 500;
@@ -297,7 +310,7 @@
       width: 100%;
       transition: all 0.2s;
       text-decoration: none;
-      padding: 2rem 0.5rem;
+      padding: 1.4rem 0.5rem;
 
       &:focus {
         outline: none;
