--- a/src/styles/movie.scss
+++ b/src/styles/movie.scss
@@ -87,6 +87,7 @@
         font-size: 2rem;
         color: gray;
         font-weight: 500;
+        text-transform: capitalize;
       }
 
       &-text {
@@ -142,7 +143,7 @@
       width: 100%;
       margin-bottom: 1rem;
       &-title {
-        font-size: 1.8rem;
+        font-size: 2rem;
         color: gray;
         font-weight: 500;
       }
@@ -176,7 +177,7 @@
       flex-direction: column;
       justify-content: space-between;
       &-header {
-        font-size: 1.8rem;
+        font-size: 2rem;
         color: gray;
         font-weight: 500;
       }
