--- a/src/styles/movies.scss
+++ b/src/styles/movies.scss
@@ -98,7 +98,7 @@
       padding: 1.4rem 0.5rem;
       &--box {
         // height: 100%;
-        // height: 30.6rem;
+        height: 30.6rem;
         // width: 20.5rem;
         &-img {
           border-radius: 0.05rem;
