--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,10 +1,14 @@
 @import url("https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,500,600&display=swap");
 @import "~slick-carousel/slick/slick-theme.css";
 @import "~slick-carousel/slick/slick.css";
+@import "searchPage";
 @import "bar";
 @import "movies";
 @import "SectionPage";
 @import "movie";
+
+$bp-m: 64.8rem;
+
 
 *,
 *::after,
@@ -18,6 +22,11 @@
 
 html {
   font-size: 62.5%; // 1rem = 10px
+
+  @media only screen and (max-width: 27rem) {
+    font-size: 42.5%;
+
+  }
 }
 
 body {
@@ -29,9 +38,14 @@ body {
 .container {
   width: 100%;
   display: flex;
+  @media only screen and (max-width: $bp-m){
+    width: 100%;
+    display:block
+  }
 }
 
 .content {
+  
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -39,6 +53,11 @@ body {
   position: relative;
   background-color: rgb(12, 11, 11);
   padding: 1rem 7rem;
+
+  @media only screen and (max-width: $bp-m){
+    padding: 1rem 4rem;
+
+  }
   // padding-bottom:2rem;
 }
 
@@ -109,7 +128,7 @@ body {
 .arrow {
   position: absolute;
   top: -1.5rem;
-  left:  100%;
+  left: 100%;
   transform: translate(-215%, -50%);
   cursor: pointer;
   transition: all 0.2s;
@@ -123,7 +142,7 @@ body {
     // left: 100%;
     // margin-left: 4rem;
   }
-  
+
   &-right {
     margin-left: 4rem;
     // right: 0;
