--- a/src/styles/bar.scss
+++ b/src/styles/bar.scss
@@ -1,3 +1,5 @@
+$bp-m: 64.8rem;
+
 .sidebar {
   width: 15%;
   height: 100vh;
@@ -7,9 +9,24 @@
   top: 0;
   // background-color: rgb(12, 11, 11);
   background-color: rgb(3, 3, 3);
+  // background-color: blue;
   // box-shadow: 0rem 0 6rem black;
   z-index: 1;
+
+  @media only screen and (max-width: $bp-m) {
+    width: 100%;
+    height: 100%;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 4rem;
+  }
   &-list {
+    @media only screen and (max-width: $bp-m) {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
     list-style: none;
     &_title {
       font-size: 1.8rem;
@@ -17,6 +34,9 @@
       //   font-weight: 500;
       letter-spacing: 0.1rem;
       padding: 3rem 3rem 2rem;
+      @media only screen and (max-width: $bp-m) {
+        display: none;
+      }
     }
 
     &_item {
@@ -29,11 +49,15 @@
       margin-bottom: 1rem;
       padding: 1rem 3rem;
       transition: all 0.2s;
+
       &--text {
         margin-left: 1rem;
         font-weight: 500;
       }
 
+      @media only screen and (max-width: $bp-m) {
+        margin-bottom: 0;
+      }
       &--active {
         // background-color: rgba(rgb(243, 45, 88), 0.2);
         color: rgb(243, 45, 88);
@@ -41,6 +65,14 @@
         border-top-left-radius: 0.1rem;
         border-bottom-left-radius: 0.1rem;
         transition: all 0.2s;
+
+        @media only screen and (max-width: $bp-m) {
+          border-bottom: 0.3rem solid rgb(243, 45, 88);
+          border-left: 0;
+
+          border-bottom-left-radius: 0;
+          border-bottom-right-radius:0;
+        }
       }
     }
   }
@@ -92,17 +124,16 @@
       height: 100%;
       background-color: transparent;
       border: none;
-      &::placeholder{
+      &::placeholder {
         color: rgb(211, 211, 211);
       }
-      &:focus{
+      &:focus {
         outline: none;
       }
     }
 
     &--icon {
       color: rgb(216, 216, 216);
-
     }
   }
   &-scroll {
@@ -123,7 +154,7 @@
       color: rgb(209, 209, 209);
       margin-right: 2.4rem;
     }
-    &--person{
+    &--person {
       width: 4.3rem;
       height: 4.3rem;
       border-radius: 50%;
