--- a/src/styles/movies.scss
+++ b/src/styles/movies.scss
@@ -1,9 +1,11 @@
+$bp-mobile:27rem;
+
 .movies-content {
   display: flex;
   flex-direction: column;
   
   &_nowPlaying {
-    margin: 1rem 0rem 1rem;
+    margin: 1.5rem 0rem 1rem;
     &--movie {
       border-radius: .5rem;
       background-size: cover;
@@ -11,7 +13,11 @@
 
       background-color: gray;
       position: relative;
-      height: 50rem;
+      height: 50vh;
+      @media only screen and (max-width: $bp-mobile) {
+        height: 25vh;
+
+      }
       // &-img {
       //   border-radius: .5rem;
       // }
@@ -70,12 +76,12 @@
     width: 100%;
     margin-bottom: 1rem;
     // padding-bottom: 1rem;
-    // height: 46rem;
+    // height: 45rem;
     &-header {
       // background-color: green;
       display: flex;
       align-items: center;
-      padding: 2rem .5rem 0;
+      padding: 2rem 0rem 0;
       &--name {
         line-height: 1;
         z-index: 10;
@@ -90,18 +96,18 @@
     &-movie {
       text-decoration: none;
       width: 100%;
+      // height: 100%;
       // display: flex;
       // justify-content: center;
       // align-items: center;
       position: relative;
       transition: all 0.2s;
-      padding: 1.4rem 0.5rem;
+      padding: 1.4rem 0.6rem;
       &--box {
-        // height: 100%;
-        height: 30.6rem;
+        // height: 30.5rem;
         // width: 20.5rem;
         &-img {
-          border-radius: 0.05rem;
+          border-radius: 0.4rem;
           width: 100%;
           height: 100%;
           display: block;
@@ -204,9 +210,9 @@
         outline: none;
       }
       &-box {
-        // width: 15rem;
-        // height: 16rem;
-        padding: 2rem 1rem;
+        width: 100%;
+        height: 16rem;
+        padding: 1rem;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -216,11 +222,13 @@
         font-size: 1.7rem;
         color: rgb(161, 161, 161);
         &--img {
+
+          flex: 2;
           display: flex;
           justify-content: center;
           align-items: center;
-          width: 7rem;
-          height: 10rem;
+          width: 50%;
+          // height: 10rem;
           padding-bottom: 1rem;
           // margin-bottom: 1rem;
           // background-color: red;
@@ -228,9 +236,9 @@
           // flex: 1;
         }
         &--text {
-          // flex: 1;
-          // width: 100%;
-          // background-color: blue;
+          flex: 1;
+          width: 100%;
+          text-align: center;
         }
         &:hover {
           // border: .5rem solid #f32d58;
@@ -273,7 +281,8 @@
     // width: 50rem;
     &-trailer {
       padding: 1.4rem 0.5rem;
-
+      border-radius:3.7rem;
+      overflow: hidden;
       // width: 50rem;
       // position: relative;
       // padding-top: 56.25%; /* Player ratio: 100 / (1280 / 720) */
@@ -306,7 +315,6 @@
     }
 
     &-network {
-      padding: 0.5rem 0.5rem;
       width: 100%;
       transition: all 0.2s;
       text-decoration: none;
@@ -318,20 +326,20 @@
       &-box {
         // width: 15rem;
         height: 16rem;
-        padding: 2rem 9rem;
+        // padding: 2rem 9rem;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
         background-color: #f32d583a;
-        border-radius: 0.2rem;
+        border-radius: 0.5rem;
         font-size: 1.7rem;
         color: rgb(161, 161, 161);
         &--img {
           display: flex;
           justify-content: center;
           align-items: center;
-
+          width: 45%;
           // padding-bottom: 1rem;
           // margin-bottom: 1rem;
           // background-color: red;
@@ -353,5 +361,10 @@
 
 .section {
   // height: 33rem;
-  // height: 30rem;
 }
+
+.small{
+  height: 27.5rem;
+
+}
+
