--- a/src/styles/bar.scss
+++ b/src/styles/bar.scss
@@ -11,21 +11,26 @@ $bp-m: 64.8rem;
   background-color: rgb(3, 3, 3);
   // background-color: blue;
   // box-shadow: 0rem 0 6rem black;
-  z-index: 1;
+  z-index: 100000;
 
   @media only screen and (max-width: $bp-m) {
     width: 100%;
     height: 100%;
     flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+    // justify-content: space-between;
+    // align-items: center;
+    // background-color: gray;
     padding: 0 4rem;
+    // height: 100%;
   }
   &-list {
     @media only screen and (max-width: $bp-m) {
       display: flex;
       justify-content: center;
-      align-items: center;
+      margin-left: 4rem;
+      // align-items: center;
+      // height: 100%;
+
     }
     list-style: none;
     &_title {
@@ -57,6 +62,9 @@ $bp-m: 64.8rem;
 
       @media only screen and (max-width: $bp-m) {
         margin-bottom: 0;
+        display: flex;
+        align-items: center;
+        height: 100%;
       }
       &--active {
         // background-color: rgba(rgb(243, 45, 88), 0.2);
@@ -91,10 +99,13 @@ $bp-m: 64.8rem;
 
 //---------nav bar----------
 .navbar {
+  @media only screen and (max-width: $bp-m) {
+   display: none;
+  }
   display: flex;
   justify-content: space-between;
   width: 100%;
-  // height: 6rem;
+  height: 6rem;
   padding: 1rem 0rem;
   // padding: 0rem 0rem;
   // background-color: red;
@@ -107,6 +118,7 @@ $bp-m: 64.8rem;
   overflow: hidden;
 
   &-search {
+
     display: flex;
     align-items: center;
     width: 30.5rem;
