--- a/src/styles/movies.scss
+++ b/src/styles/movies.scss
@@ -1,23 +1,36 @@
-$bp-mobile:27rem;
+$bp-mobile: 27rem;
 
 .movies-content {
   display: flex;
   flex-direction: column;
-  
+
   &_nowPlaying {
     margin: 1.5rem 0rem 1rem;
     &--movie {
-      border-radius: .5rem;
+      border-radius: 0.5rem;
       background-size: cover;
       background-repeat: no-repeat;
 
       background-color: gray;
       position: relative;
-      height: 50vh;
-      @media only screen and (max-width: $bp-mobile) {
-        height: 25vh;
+      height: 50rem;
 
+      @media only screen and (max-width: 80rem) {
+        height: 40vh;
       }
+      @media only screen and (max-width: 65rem) {
+        height: 35vh;
+      }
+
+      @media only screen and (max-width: 37.5rem) {
+        height: 25vh;
+      }
+
+      // @media only screen and (max-width: 32.5rem) {
+      //   height: 20vh;
+
+      // }
+
       // &-img {
       //   border-radius: .5rem;
       // }
@@ -31,7 +44,7 @@ $bp-mobile:27rem;
         bottom: 0rem;
         background-image: linear-gradient(
           45deg,
-          rgba(rgb(12, 11, 11), .8),
+          rgba(rgb(12, 11, 11), 0.8),
           rgba(rgb(12, 11, 11), 0)
         );
         width: 100%;
@@ -182,14 +195,13 @@ $bp-mobile:27rem;
     }
   }
   &_genreSection {
-    // padding: 2rem 0rem;
     width: 100%;
     margin-bottom: 2rem;
     &-header {
       display: flex;
       align-items: center;
       justify-content: space-between;
-      padding: 2rem .5rem 1rem;
+      padding: 2rem 0.5rem 1rem;
       line-height: 1;
 
       &--name {
@@ -222,12 +234,11 @@ $bp-mobile:27rem;
         font-size: 1.7rem;
         color: rgb(161, 161, 161);
         &--img {
-
           flex: 2;
           display: flex;
           justify-content: center;
           align-items: center;
-          width: 50%;
+          width: 8rem;
           // height: 10rem;
           padding-bottom: 1rem;
           // margin-bottom: 1rem;
@@ -252,25 +263,26 @@ $bp-mobile:27rem;
     }
   }
   &_trailerSection {
-    width: 100%;
     margin-bottom: 1rem;
-    // height: 46rem;
 
+    &-box {
+      padding: 0 0.5rem;
+    }
+    // height: 46rem;
 
     & .slick-list > div {
       margin-left: 0;
     }
     &-inner {
-      background-color: red;
       //  width: 50%;
-      padding: 0;
+      // padding: ;
     }
     &-header {
       display: flex;
       line-height: 1;
       // align-items: flex-end;
       justify-content: space-between;
-      padding: 2rem .5rem 0;
+      padding: 2rem 0.5rem 0;
       &--name {
         color: white;
         font-size: 2.6rem;
@@ -280,17 +292,21 @@ $bp-mobile:27rem;
     }
     // width: 50rem;
     &-trailer {
-      padding: 1.4rem 0.5rem;
-      border-radius:3.7rem;
+      margin-top: 1.3rem;
       overflow: hidden;
-      // width: 50rem;
-      // position: relative;
-      // padding-top: 56.25%; /* Player ratio: 100 / (1280 / 720) */
+      // border:.2rem solid #000;
+      z-index: 10;
+
+      position: relative;
+      padding-top: 56.25%; /* Player ratio: 100 / (1280 / 720) */
+      border-radius: 0.5rem;
       &--player {
+        // padding: 0 1rem;
         // width: 100%;
-        // position: absolute;
-        // top: 0;
-        // left: 0;
+        // height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
       }
     }
   }
@@ -303,7 +319,7 @@ $bp-mobile:27rem;
       display: flex;
       align-items: flex-end;
       justify-content: space-between;
-      padding: 2rem .5rem 0rem;
+      padding: 2rem 0.5rem 0rem;
       &--name {
         line-height: 1;
         z-index: 10;
@@ -363,8 +379,17 @@ $bp-mobile:27rem;
   // height: 33rem;
 }
 
-.small{
+.small {
   height: 27.5rem;
-
 }
 
+.player-wrapper {
+  position: relative;
+  padding-top: 56.25%; /* Player ratio: 100 / (1280 / 720) */
+}
+
+.react-player {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
