--- a/src/styles/movies.scss
+++ b/src/styles/movies.scss
@@ -213,7 +213,7 @@ $bp-mobile: 27rem;
     }
 
     &-genre {
-      padding: 0.5rem 0.5rem;
+      // padding: 0.5rem 0.5rem;
       width: 100%;
       transition: all 0.2s;
       text-decoration: none;
@@ -223,31 +223,32 @@ $bp-mobile: 27rem;
       }
       &-box {
         width: 100%;
-        height: 16rem;
-        padding: 1rem;
+        padding: 3rem;
+        height: 8rem;
         display: flex;
-        flex-direction: column;
-        justify-content: center;
+
+        background-color: aquamarine;
+        // flex-direction: column;
+        justify-content: space-between;
         align-items: center;
         background-color: rgba(27, 27, 27, 0.404);
         border-radius: 0.2rem;
         font-size: 1.7rem;
         color: rgb(161, 161, 161);
         &--img {
-          flex: 2;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          width: 8rem;
+          // flex: 2;
+          // display: flex;
+          // justify-content: center;
+          // align-items: center;
+          width: 7rem;
           // height: 10rem;
-          padding-bottom: 1rem;
+          // padding-bottom: 1rem;
           // margin-bottom: 1rem;
           // background-color: red;
           // width: 6rem;
           // flex: 1;
         }
         &--text {
-          flex: 1;
           width: 100%;
           text-align: center;
         }
@@ -375,9 +376,14 @@ $bp-mobile: 27rem;
   }
 }
 
-.section {
-  // height: 33rem;
+.genreWrapper {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(24rem, 1fr));
+  grid-gap: 1rem;
 }
+// .section {
+//   // height: 33rem;
+// }
 
 .small {
   height: 27.5rem;
