--- a/src/styles/movies.scss
+++ b/src/styles/movies.scss
@@ -109,7 +109,6 @@ $bp-mobile: 27rem;
     &-movie {
       text-decoration: none;
       width: 100%;
-      // height: 100%;
       // display: flex;
       // justify-content: center;
       // align-items: center;
@@ -117,7 +116,8 @@ $bp-mobile: 27rem;
       transition: all 0.2s;
       padding: 1.4rem 0.6rem;
       &--box {
-        // height: 30.5rem;
+        // height: 100%;
+
         // width: 20.5rem;
         &-img {
           border-radius: 0.4rem;
@@ -227,12 +227,12 @@ $bp-mobile: 27rem;
         height: 8rem;
         display: flex;
 
-        background-color: aquamarine;
+        // background-color: aquamarine;
         // flex-direction: column;
         justify-content: space-between;
         align-items: center;
         background-color: rgba(27, 27, 27, 0.404);
-        border-radius: 0.2rem;
+        border-radius: 0.4rem;
         font-size: 1.7rem;
         color: rgb(161, 161, 161);
         &--img {
@@ -274,10 +274,10 @@ $bp-mobile: 27rem;
     & .slick-list > div {
       margin-left: 0;
     }
-    &-inner {
-      //  width: 50%;
-      // padding: ;
-    }
+    // &-inner {
+    //   //  width: 50%;
+    //   // padding: ;
+    // }
     &-header {
       display: flex;
       line-height: 1;
