--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -49,6 +49,7 @@ body {
   font-size: inherit;
   font-family: "IBM Plex Sans", sans-serif;
   height: 100vh;
+  position: relative;
 }
 
 .container {
@@ -174,4 +175,11 @@ body {
 .routes {
   width: 100%;
   height: 100%;
+}
+
+.fix {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
