--- a/src/styles/movies.scss
+++ b/src/styles/movies.scss
@@ -109,6 +109,7 @@ $bp-mobile: 27rem;
     &-movie {
       text-decoration: none;
       width: 100%;
+      height: 100%;
       // display: flex;
       // justify-content: center;
       // align-items: center;
@@ -116,6 +117,9 @@ $bp-mobile: 27rem;
       transition: all 0.2s;
       padding: 1.4rem 0.6rem;
       &--box {
+        display: flex;
+        justify-content: center;
+        align-items: center;
         // height: 100%;
 
         // width: 20.5rem;
@@ -123,7 +127,6 @@ $bp-mobile: 27rem;
           border-radius: 0.4rem;
           width: 100%;
           height: 100%;
-          display: block;
 
           &:hover {
             box-shadow: 0rem 0rem 3rem rgba(0, 0, 0, 0.5);
@@ -131,7 +134,7 @@ $bp-mobile: 27rem;
         }
         position: relative;
 
-        background-color: rgba(27, 27, 27, 0.404);
+        // background-color: rgba(27, 27, 27, 0.404);
         &-info {
           transition: all 0.3s;
           opacity: 0;
