--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -48,31 +48,30 @@ html {
 body {
   font-size: inherit;
   font-family: "IBM Plex Sans", sans-serif;
-  height: 100vh;
   position: relative;
+  background-color: rgb(17, 16, 16);
+  height: 100vh;
 }
 
 .container {
   width: 100%;
-  display: flex;
-  @media only screen and (max-width: $bp-m) {
-    width: 100%;
-    display: block;
-  }
+  // display: flex;
+  // @media only screen and (max-width: $bp-m) {
+  //   width: 100%;
+  //   display: block;
+  // }
 }
 
 .content {
   flex: 1;
   display: flex;
   flex-direction: column;
-  width: 100%;
-  position: relative;
-  background-color: rgb(12, 11, 11);
-  padding: 1rem 7rem;
-
-  @media only screen and (max-width: $bp-m) {
-    padding: 1rem 4rem;
-  }
+  max-width: 140rem;
+  margin: auto;
+  height: 100%;
+  // @media only screen and (max-width: $bp-m) {
+  //   padding: 1rem 4rem;
+  // }
   // padding-bottom:2rem;
 }
 
@@ -173,6 +172,8 @@ body {
 }
 
 .routes {
+  margin-top: 8rem;
+
   width: 100%;
   height: 100%;
 }
