--- a/src/styles/bar.scss
+++ b/src/styles/bar.scss
@@ -1,38 +1,53 @@
 $bp-m: 64.8rem;
 
 .sidebar {
-  width: 15%;
-  height: 100vh;
-  position: sticky;
-  display: flex;
-  flex-direction: column;
-  top: 0;
+  width: 100%;
+  height: 7rem;
+  // padding: 1.5rem 0;
+  border-bottom: 0.1rem solid rgb(32, 31, 31);
+  position: fixed;
+
+  // flex-direction: column;
+  // top: 0;
   // background-color: rgb(12, 11, 11);
-  background-color: rgb(3, 3, 3);
+  // background-color: rgb(3, 3, 3);
+  background-color: #050506;
+
   // background-color: blue;
   // box-shadow: 0rem 0 6rem black;
   z-index: 100000;
 
-  @media only screen and (max-width: $bp-m) {
-    width: 100%;
+  // @media only screen and (max-width: $bp-m) {
+  //   width: 100%;
+  //   height: 100%;
+  //   flex-direction: row;
+  //   // justify-content: space-between;
+  //   // align-items: center;
+  //   // background-color: gray;
+  //   padding: 0 4rem;
+  //   // height: 100%;
+  // }
+  &-wrapper {
+    max-width: 140rem;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     height: 100%;
-    flex-direction: row;
-    // justify-content: space-between;
-    // align-items: center;
-    // background-color: gray;
-    padding: 0 4rem;
-    // height: 100%;
   }
   &-list {
-    margin-top: 3rem;
-    padding: 0 2rem;
-    @media only screen and (max-width: $bp-m) {
-      display: flex;
-      justify-content: center;
-      margin-left: 4rem;
-      // align-items: center;
-      // height: 100%;
-    }
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    // margin-top: 3rem;
+    // padding: 0 2rem;
+    // @media only screen and (max-width: $bp-m) {
+    //   display: flex;
+    //   justify-content: center;
+    //   margin-left: 4rem;
+    //   // align-items: center;
+    //   // height: 100%;
+    // }
     list-style: none;
     &_title {
       display: none;
@@ -47,16 +62,15 @@ $bp-m: 64.8rem;
     }
 
     &_item {
+      height: 100%;
       color: rgba(255, 255, 255, 0.788);
       text-decoration: none;
       display: flex;
       align-items: center;
       font-size: 1.4rem;
       text-transform: capitalize;
-      margin-bottom: 1rem;
       padding: 1.2rem 2rem;
-      transition: all 0.3s;
-      border-radius: 0.5rem;
+      transition: color 0.3s;
 
       &--text {
         margin-left: 1rem;
@@ -71,14 +85,17 @@ $bp-m: 64.8rem;
       }
       &--active {
         // background-color: rgba(rgb(243, 45, 88), 0.2);
-        background-color: rgb(243, 45, 88);
-        @media only screen and (max-width: $bp-m) {
-          border-bottom: 0.3rem solid rgb(243, 45, 88);
-          border-left: 0;
+        color: rgb(243, 45, 88);
+        border-bottom: 0.1rem solid rgb(243, 45, 88);
 
-          border-bottom-left-radius: 0;
-          border-bottom-right-radius: 0;
-        }
+        // background-color: rgb(243, 45, 88);
+        // @media only screen and (max-width: $bp-m) {
+        //   border-bottom: 0.3rem solid rgb(243, 45, 88);
+        //   border-left: 0;
+
+        //   border-bottom-left-radius: 0;
+        //   border-bottom-right-radius: 0;
+        // }
       }
 
       &:hover:not(&--active) {
@@ -89,42 +106,35 @@ $bp-m: 64.8rem;
 }
 
 .logo {
+  margin-right: 10rem;
   color: white;
   font-size: 2.5rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 9rem;
+  // display: flex;
+  // justify-content: center;
+  // align-items: center;
+  // height: 9rem;
 
   font-weight: 500;
 }
 
 //---------nav bar----------
 .navbar {
-  @media only screen and (max-width: $bp-m) {
-    display: none;
-  }
+  // flex: 2;
   display: flex;
-  justify-content: space-between;
-  width: 100%;
-  height: 6rem;
-  padding: 1rem 0rem;
   // padding: 0rem 0rem;
   // background-color: red;
-  background-color: transparent;
   // position: absolute;
-  top: 0;
-  z-index: 10000;
+
   transition: background-color 0.4s;
   // font-size: 2rem;
-  overflow: hidden;
+  // overflow: hidden;
 
   &-search {
     display: flex;
     align-items: center;
-    width: 30.5rem;
-    background-color: #80808033;
-    padding: 0rem 0rem 0 2rem;
+    // width: 30.5rem;
+    // background-color: #80808033;
+    padding: 1rem 2rem;
     border-radius: 0.4rem;
     &--active {
       background-color: transparent;
@@ -133,8 +143,6 @@ $bp-m: 64.8rem;
       font-size: 1.7rem;
       color: rgb(221, 221, 221);
       margin-left: 1.5rem;
-      width: 100%;
-      height: 100%;
       background-color: transparent;
       border: none;
       &::placeholder {
