--- a/src/styles/searchPage.scss
+++ b/src/styles/searchPage.scss
@@ -20,7 +20,12 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: -5rem;
+    position: absolute;
+
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    // margin-top: -5rem;
 
     &-header {
       color: white;
