--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -6,6 +6,7 @@
 @import "movies";
 @import "SectionPage";
 @import "movie";
+@import "home";
 
 $bp-m: 64.8rem;
 
@@ -50,11 +51,14 @@ body {
   font-family: "IBM Plex Sans", sans-serif;
   position: relative;
   background-color: rgb(17, 16, 16);
+  background-color: #0e0e0e;
+
   height: 100vh;
 }
 
 .container {
   width: 100%;
+  height: 100vh;
   // display: flex;
   // @media only screen and (max-width: $bp-m) {
   //   width: 100%;
