create lists card & update redux store

--- a/src/styles/movies.scss
+++ b/src/styles/movies.scss
@@ -390,9 +390,9 @@ $bp-mobile: 27rem;
 //   // height: 33rem;
 // }
 
-.small {
-  height: 27.5rem;
-}
+// .small {
+//   height: 27.5rem;
+// }
 
 .player-wrapper {
   position: relative;
