--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -5,7 +5,7 @@
   height: calc(100% - 13rem);
 }
 
-.list {
+.lists {
   flex: 1;
   height: 100%;
   &-header {
@@ -23,42 +23,64 @@
       background-color: #f32d58;
     }
   }
-
   &-content {
     margin-top: 2rem;
     height: 100%;
-    border: 0.1rem dashed #424141;
-    border-radius: 1rem;
-    &-holder {
-      height: 100%;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    align-items: start;
+    grid-row-gap: 3rem;
+    grid-column-gap: 2rem;
+  }
+}
 
-      &--img {
-        width: 25rem;
-
-        & img {
-          width: 100%;
-        }
+.list {
+  &-card {
+    border-radius: 0.5rem;
+    overflow: hidden;
+    &--cover {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      & img {
+        width: 100%;
       }
+    }
+  }
+  &-name {
+    color: white;
+    font-size: 1.6rem;
+    margin-top: 1rem;
+  }
+}
 
-      &--text {
-        margin-top: 3rem;
+.emptyList {
+  height: 100%;
+  border: 0.1rem dashed #424141;
+  border-radius: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  &-img {
+    width: 25rem;
 
-        text-align: center;
-        &-header {
-          color: white;
-          font-size: 2rem;
-          font-weight: 500;
-        }
+    & img {
+      width: 100%;
+    }
+  }
+  &-content {
+    margin-top: 3rem;
 
-        &-desc {
-          font-size: 1.6rem;
-          color: rgb(124, 124, 124);
-        }
-      }
+    text-align: center;
+    &--header {
+      color: white;
+      font-size: 2rem;
+      font-weight: 500;
+    }
+
+    &--desc {
+      font-size: 1.6rem;
+      color: rgb(124, 124, 124);
     }
   }
 }
