--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -34,13 +34,19 @@
     }
   }
   &-content {
-    margin-top: 2rem;
-    height: 100%;
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    align-items: start;
-    grid-row-gap: 3rem;
-    grid-column-gap: 2rem;
+    &-empty {
+      height: 100%;
+      margin-top: 2rem;
+    }
+    &-grid {
+      width: 100%;
+      margin-top: 2rem;
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      align-items: start;
+      grid-row-gap: 2rem;
+      grid-column-gap: 2rem;
+    }
   }
 }
 
@@ -62,8 +68,8 @@
         align-items: center;
 
         & * {
-          font-size: 6rem;
-          color: white;
+          font-size: 9rem;
+          color: rgb(68, 68, 68);
         }
       }
 
@@ -77,7 +83,7 @@
       position: absolute;
       top: 0;
       left: 0;
-      background-color: rgba(0, 0, 0, 0.815);
+      background-color: rgba(0, 0, 0, 0.774);
       height: 100%;
       width: 100%;
 
@@ -87,19 +93,41 @@
         width: 100%;
         &-pencil {
           font-size: 5.5rem;
-          color: white;
+          color: rgb(175, 175, 175);
           position: absolute;
           top: 50%;
           left: 50%;
+          display: flex;
           transform: translate(-50%, -50%);
+          cursor: pointer;
+          background-color: transparent;
+          border: none;
+          transition: all 0.2s;
+          &:hover {
+            color: white;
+          }
+          &:focus {
+            outline: none;
+          }
         }
 
         &-dots {
+          background-color: transparent;
+          border: none;
           font-size: 3rem;
-          color: white;
+          color: rgb(175, 175, 175);
           position: absolute;
+          display: flex;
+          cursor: pointer;
           top: 0;
-          right: 3%;
+          right: 2%;
+          transition: all 0.2s;
+          &:hover {
+            color: white;
+          }
+          &:focus {
+            outline: none;
+          }
         }
       }
     }
@@ -117,6 +145,7 @@
 
 .emptyList {
   height: 100%;
+  width: 100%;
   border: 0.1rem dashed #424141;
   border-radius: 1rem;
   display: flex;
@@ -324,9 +353,20 @@
           &:focus {
             outline: none;
           }
-
           &:hover {
             background-color: #c42345;
+          }
+
+          &:disabled {
+            // background-color: gray;
+            // opacity: 1;
+            // cursor: auto;
+            cursor: not-allowed;
+            pointer-events: none;
+
+            /*Button disabled - CSS color class*/
+            color: #c0c0c0;
+            background-color: #646464;
           }
         }
       }
