--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -39,7 +39,6 @@
       margin-top: 2rem;
     }
     &-grid {
-      width: 100%;
       margin-top: 2rem;
       display: grid;
       grid-template-columns: repeat(4, 1fr);
@@ -369,6 +368,83 @@
             background-color: #646464;
           }
         }
+      }
+    }
+  }
+}
+
+.menu {
+  background-color: #242424;
+  box-shadow: 0 1rem 5rem rgb(0, 0, 0);
+  position: absolute;
+  top: 88%;
+  left: 50%;
+  width: 30rem;
+  transform: translateX(-50%);
+  border-radius: 0.5rem;
+  padding: 1.5rem;
+  z-index: 100000;
+
+  &-search {
+    height: auto;
+    width: 100%;
+    position: relative;
+
+    &--input {
+      width: 100%;
+      padding: 1rem;
+      border-radius: 0.3rem;
+      border: 0.05rem solid rgb(73, 73, 73);
+      border: none;
+    }
+
+    &--icon {
+      font-size: 1.8rem;
+      position: absolute;
+      top: 53%;
+      right: 4%;
+      color: gray;
+      transform: translateY(-50%);
+    }
+  }
+
+  &-lists {
+    max-height: 22rem;
+    margin-top: 2rem;
+    overflow: scroll;
+    &-title {
+      font-size: 1.6rem;
+      color: #afafaf;
+      margin-bottom: 1rem;
+      font-weight: 300;
+    }
+
+    &--status {
+      font-size: 1.4rem;
+      padding: 1rem;
+      text-align: center;
+    }
+
+    &-list {
+      margin: 1rem 0;
+      padding: 0.2rem 0.7rem;
+      // background-color: blue;
+      font-size: 1.4rem;
+      font-weight: 500;
+      align-items: center;
+      display: flex;
+      justify-content: space-between;
+
+      &--title {
+        flex: 1;
+        padding-right: 1rem;
+      }
+      &--btn {
+        padding: 0.8rem 2rem;
+        background-color: #f32d58;
+        border: none;
+        border-radius: 0.3rem;
+        color: white;
       }
     }
   }
