--- a/src/styles/movie.scss
+++ b/src/styles/movie.scss
@@ -215,9 +215,7 @@
         flex-direction: column;
         justify-content: space-between;
         margin-top: 4rem;
-        // position: relative
-
-        height: 12rem;
+        position: relative;
       }
     }
   }
