--- a/src/styles/SectionPage.scss
+++ b/src/styles/SectionPage.scss
@@ -3,12 +3,19 @@
   display: flex;
   flex-direction: column;
   &-content {
-    margin: 3rem 0rem;
+    margin: 1rem 0rem;
     &_info {
       color: white;
       text-transform: capitalize;
-      font-size: 2.6rem;
+      font-size: 5rem;
       font-weight: 500;
+      padding: 7rem 0.5rem;
+      text-align: center;
+      background-image: linear-gradient(45deg, #c52144, #6b1313);
+      border-radius: 0.5rem;
+
+      border-radius: 0.5rem;
+      margin-bottom: 1rem;
     }
     &_movies {
       width: 100%;
